--- a/assets/css - old delete later/homenet-text.css
+++ b/assets/css - old delete later/homenet-text.css
@@ -51,7 +51,7 @@ h4.section-title {
 
 .element-title {
 color: var(--header-color);
-font-family: var(--font-secondary);
+font-family: var(--font-second);
     font-size: 22px;
 	font-weight: 700;
 
