--- a/assets/css/calculator/calculator.css
+++ b/assets/css/calculator/calculator.css
@@ -1,12 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Muli:300);
 
 .calc-container {
-    font-family: var(--font-secondary);
+    font-family: var(--font-second);
     font-weight: 400;
     letter-spacing: 0.07px;
     line-height: 1.5;
     font-size: 15px;
-    color: #000;
+    color: var(--thin-font-color);
 }
 
 /*
@@ -344,7 +344,7 @@ span.empty {
 /* Element Styles */
 
 div#stamp_duty {
-    font-family: var(--font-family-base);
+    font-family: var(--font-main);
     font-size: 44px;
     color: #fc835c;
     font-weight: 200;
