--- a/scss/_theming.scss
+++ b/scss/_theming.scss
@@ -1054,8 +1054,8 @@ $info-box-4-caption-py:                 5rem;
 
 // Font, line-height, and color for body text, headings, and more.
 // 
---font-family-base: "Montserrat", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
---font-secondary: "Muli", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
+--font-main: "Montserrat", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
+--font-second: "Muli", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
 --font-zh: "Montserrat", 'Verdana', 'Avenir', "Noto Serif SC", 宋体, SimSun, 
 
 }
