--- a/assets/css/calculator.css
+++ b/assets/css/calculator.css
@@ -1,12 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Muli:300);
 
 .calc-container {
-    font-family: var(--font-secondary);
+    font-family: var(--font-second);
     font-weight: 400;
     letter-spacing: 0.07px;
     line-height: 1.5;
     font-size: 15px;
-    color: #000;
+    color: var(--thin-font-color);
 }
 
 .column-element.white-section.calc-container {
@@ -331,7 +331,7 @@ span.empty {
 
 #chart_div>div>div,
 #chart_div g {
-    font-family: var(--font-secondary);
+    font-family: var(--font-second);
 }
 
 
@@ -557,7 +557,7 @@ span.empty {
 
 div#stamp_duty,
 .avg-mortgage {
-    font-family: var(--font-family-base);
+    font-family: var(--font-main);
     font-size: 44px;
     color: #fc835c;
     font-weight: 200;
@@ -693,7 +693,7 @@ div#ui-datepicker-div {
     width: 100%;
     height: 39px;
     font-weight: 400;
-    color: #717171;
+    color: var(--input-font-color);
     background-color: transparent;
     background-clip: padding-box;
     border: 2px solid #e0e0e0;
@@ -1107,12 +1107,12 @@ button:focus {
 
 .homenet-radio input.yes:checked+span:before {
     transform: scale(1.04);
-    background: #c6eace;
+    background: var(--yes-flat-green);
 }
 
 .homenet-radio input.no:checked+span:before {
     transform: scale(1.04);
-    background: #ffc8b6;
+    background: var(--no-flat-red);
 }
 
 
