--- a/assets/css/homenet-contact.css
+++ b/assets/css/homenet-contact.css
@@ -162,7 +162,7 @@ section {
     line-height: 1;
     margin-bottom: 15px;
     font-size: 34.5px;
-    font-family: var(--font-secondary);
+    font-family: var(--font-second);
     color: var(--header-color);
 }
 
@@ -172,7 +172,7 @@ section {
     color: var(--black_default);
     line-height: 1;
     font-size: inherit;
-font-family: var(--font-secondary);
+font-family: var(--font-second);
 }
 
 @media (max-width: 991px) {
@@ -331,7 +331,7 @@ font-family: var(--font-secondary);
     text-transform: uppercase;
     color: var(--black_default);
     font-weight: 500;
-    font-family: "Muli", "Verdana", "Avenir", "Tahoma", sans-serif;
+    font-family: var(--font-main);
     margin-bottom: 5px;
 }
 
