--- a/assets/css/content-pg-bs4-big.css
+++ b/assets/css/content-pg-bs4-big.css
@@ -11,7 +11,7 @@ section {
     background-color: var(--white-section);
 }
 
-/* General Image CSS */
+/* General Image CSS For Content Pages */
 
 .image img {
     width: 100%;
@@ -50,15 +50,12 @@ section {
     .images-wrapper {
         margin-bottom: 30px;
     }
-
     .images-wrapper .two-side {
         display: none;
     }
 }
 
-
 @media (max-width: 767px) {
-
     .images-wrapper {
         margin-bottom: 20px;
     }
