--- a/assets/css/calculator.css
+++ b/assets/css/calculator.css
@@ -5,7 +5,7 @@
     font-weight: 400;
     letter-spacing: 0.07px;
     line-height: 1.5;
-    font-size: 15px;
+    font-size: 1.5rem;
     color: var(--thin-font-color);
 }
 
@@ -202,7 +202,7 @@ span.empty {
 
 
 #pietable table {
-    font-size: 15px;
+    font-size: 1.5rem;
     letter-spacing: 0px;
     table-layout: auto;
     width: auto;
@@ -216,7 +216,7 @@ span.empty {
 
 #pietable table td {
     text-align: right;
-    font-size: 16px;
+    font-size: 1.6rem;
     width: auto;
 }
 
@@ -560,7 +560,7 @@ span.empty {
 div#stamp_duty,
 .avg-mortgage {
     font-family: var(--font-main);
-    font-size: 44px;
+    font-size: 4.4rem;
     color: #fc835c;
     font-weight: 200;
     letter-spacing: -1.4px;
@@ -570,7 +570,7 @@ div#stamp_duty,
 
 
 .total .result-desc {
-    font-size: 14px;
+    font-size: 1.4rem;
     letter-spacing: -0.3px;
 }
 
@@ -587,25 +587,25 @@ div#stamp_duty,
 }
 
 .parts-result {
-    font-size: 22px;
+    font-size: 2.2rem;
     font-weight: 300;
     letter-spacing: -0.5px;
 }
 
 .parts-result .result-desc {
-    font-size: 13px;
+    font-size: 1.3rem;
     letter-spacing: -0.3px;
     font-weight: 400;
 }
 
 .parts-result .result-desc2 {
-    font-size: 12.5px;
+    font-size: 1.25rem;
     font-weight: 400;
     letter-spacing: 0px;
 }
 
 span.empty {
-    font-size: 15px;
+    font-size: 1.5rem;
     letter-spacing: -0.3px;
     font-weight: 400;
 }
@@ -635,7 +635,7 @@ span.empty {
 }
 
 .footer-note {
-    font-size: 13px;
+    font-size: 1.3rem;
     color: #fff;
     padding: 17px 16px 24px 16px;
 }
@@ -665,7 +665,7 @@ span.empty {
 }
 
 .calc-input input#start-date::placeholder {
-    font-size: 14px;
+    font-size: 1.4rem;
     letter-spacing: -0.2px;
 }
 
@@ -682,7 +682,7 @@ div#ui-datepicker-div {
 
 .calc-input input {
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 39px;
     letter-spacing: 0.4px;
     color: #52595a;
@@ -717,7 +717,7 @@ div#ui-datepicker-div {
     width: 100%;
     padding: 0px 32px 0 22px;
     height: 39px;
-    font-size: 13.5px;
+    font-size: 1.35rem;
     letter-spacing: -0.2px;
     font-weight: 400;
     line-height: 1.3;
@@ -744,7 +744,7 @@ div#ui-datepicker-div {
 }
 
 .footnote {
-    font-size: 13px;
+    font-size: 1.3rem;
     letter-spacing: 0.1px;
     text-align: justify;
     padding: 14px 5px 0px 5px;
@@ -760,7 +760,7 @@ div#ui-datepicker-div {
 .calc-header,
 #renttable tr.header .head,
 #morttable tr.header .head {
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 500;
     color: #343638;
     letter-spacing: 0.1px;
@@ -819,7 +819,7 @@ div#ui-datepicker-div {
 .calc-table .updated {
     padding-bottom: 9px;
     padding-top: 9px;
-    font-size: 14.5px;
+    font-size: 1.45rem;
 }
 
 .calc-table-head,
@@ -827,7 +827,7 @@ div#ui-datepicker-div {
     padding-top: 13.5px;
     padding-bottom: 13.5px;
     background-color: #d3dee8;
-    font-size: 13.5px;
+    font-size: 1.35rem;
     font-weight: 500;
     color: #352d2d;
 }
@@ -853,7 +853,7 @@ div.table-content>div:nth-of-type(odd),
 
 .calc-table .note {
     margin: 27px 0 10px 0;
-    font-size: 13.5px;
+    font-size: 1.35rem;
 }
 
 .calc-table.noshow {
@@ -892,37 +892,37 @@ table .headerrow th {
     padding-top: 13.5px;
     padding-bottom: 13.5px;
     background-color: #d3dee8;
-    font-size: 12.5px;
+    font-size: 1.25rem;
     font-weight: 500 !important;
     color: #352d2d;
 }
 
 #morttable table .headerrow th {
     padding: 14.5px 1px;
-    font-size: 12.5px;
+    font-size: 1.25rem;
 }
 
 #renttable .contentrow {
-    font-size: 14px;
+    font-size: 1.4rem;
     letter-spacing: 0.4px;
     line-height: 2.2;
 }
 
 #morttable .contentrow {
-    font-size: 15.5px;
+    font-size: 1.55rem;
     letter-spacing: 0.3px;
     line-height: 2.5;
 }
 
 #renttable tr.totals {
     line-height: 4;
-    font-size: 14.5px;
+    font-size: 1.45rem;
     font-weight: 500;
     color: #1c232a;
 }
 
 #renttable td.dt {
-    font-size: 11px;
+    font-size: 1.1rem;
     padding-right: 12px;
     font-weight: 500;
 }
@@ -958,7 +958,7 @@ table .headerrow th {
 
 #renttable td.m {
     font-weight: 500;
-    font-size: 13px;
+    font-size: 1.3rem;
     color: #3c4546;
 }
 
@@ -1018,7 +1018,7 @@ button#calculate {
     text-transform: uppercase;
     letter-spacing: 0.8px;
     font-weight: 500;
-    font-size: 14px;
+    font-size: 1.4rem;
     border: solid 1px var(--homenet-flat-orange);
     position: relative;
     text-align: center;
@@ -1209,7 +1209,7 @@ button:focus {
 
 @media (min-width: 750px) and (max-width: 800px) {
     #pietable table {
-        font-size: 15px;
+        font-size: 1.5rem;
     }
 
     #pietable table th {
@@ -1217,7 +1217,7 @@ button:focus {
     }
 
     #pietable table td {
-        font-size: 15px;
+        font-size: 1.5rem;
     }
     .mort-calc span.empty {
         left: 41%;
