--- a/assets/css/homenet-bootstrap4.css
+++ b/assets/css/homenet-bootstrap4.css
@@ -139,7 +139,7 @@ body.zh-cn div * {
 }
 
 
-body.zh-cn div * {  
+body.zh-hk div * {  
     font-family: "Montserrat", sans-serif; 
     font-family: "Nunito", 'Verdana', 'Avenir', "Noto Serif SC", "Microsoft Yahei", "微软雅黑", 宋体, SimSun, STXihei, "华文细黑", sans-serif; 
     letter-spacing: initial !important;
