lang is zh omfg

--- a/assets/css/homenet-bootstrap4.css
+++ b/assets/css/homenet-bootstrap4.css
@@ -134,27 +134,32 @@ body {
 
 body.zh-cn div * {  
     font-family: "Montserrat", sans-serif; 
-    font-family: "Nunito", "Muli", sans-serif; 
+    font-family: sans-serif; 
     letter-spacing: initial !important;
+    font-weight: 300;
 }
 
 
 body.zh-hk div * {  
     font-family: "Montserrat", sans-serif; 
-    font-family: "Nunito", 'Verdana', 'Avenir', "Microsoft YaHei New", "微软雅黑", "Microsoft Yahei", "Hiragino Sans GB", sans-serif; 
+    font-family: sans-serif; 
     letter-spacing: initial !important;
+    font-weight: 300;
+}
+
+body * {  
     font-weight: 300;
 }
 
 body.zh-hk h1, body.zh-cn h1 {  
 font-family: "Montserrat", 'Verdana', 'Avenir', "Noto Sans SC", sans-serif;
+font-family: "Nunito", 'Verdana', 'Avenir', "Microsoft YaHei New", "微软雅黑", "Microsoft Yahei", "Hiragino Sans GB", "Noto Sans", sans-serif;
 font-family: "Montserrat", sans-serif; 
-font-family: "Nunito", 'Verdana', 'Avenir', "Microsoft YaHei New", "微软雅黑", "Microsoft Yahei", "Hiragino Sans GB", "Noto Sans", sans-serif; 
 font-weight: 600;
 }
 
 html:lang(zh-hk),
-html:lang(zh-cn)
+html
 {font-size: 11px !important; }
 
 
